tests/ui/type-inference/wrong-span-into-issue-146126.stderr
error[E0282]: type annotations needed
  --> $DIR/wrong-span-into-issue-146126.rs:12:34
   |
LL |     if let Some(x) = v.get(0_i16.into()) {
   |                                  ^^^^
...
LL |         if let Some(f) = x.f {
   |                          --- type must be known at this point
   |
help: try using a fully qualified path to specify the expected types
   |
LL -     if let Some(x) = v.get(0_i16.into()) {
LL +     if let Some(x) = v.get(<i16 as Into<T>>::into(0_i16)) {
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
